--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -31,7 +31,7 @@
 }
 
 .site-list__link--current {
-  color: $lightgreen;
+  color: $accent;
 }
 
 .site-list__link--current::before {
@@ -40,7 +40,7 @@
   height: 2px;
   width: 100%;
   position: absolute;
-  background-color: $lightgreen;
+  background-color: $accent;
 }
 
 @media (min-width: $tablet-width) {
