--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,5 +5,7 @@ $harddark:#111111;
 $dark:#222222;
 $lightdark:#444444;
 $lightgrey: #f2f2f2;
-$lightgreen:#7859cf;
+$accent:#7859cf;
+$accent-lighter:#9070ec;
+$slider:#f3ebe1;
 $addfont: "Montserrat", "Arial", sans-serif;
