--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,3 +9,13 @@
 @import "blocks/page-body";
 @import "blocks/menu-nav";
 @import "blocks/site-list";
+@import "blocks/main-header";
+@import "blocks/visually-hidden";
+@import "blocks/button";
+@import "blocks/swiper";
+@import "blocks/advantages";
+@import "blocks/control";
+@import "blocks/filter";
+@import "blocks/products";
+@import "blocks/page-header";
+@import "blocks/sorting";
