--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,7 @@
 @import "blocks/products";
 @import "blocks/page-header";
 @import "blocks/sorting";
+@import "blocks/catalog";
+@import "blocks/product-card";
+@import "blocks/pagination";
+@import "blocks/location";
