--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -5,6 +5,7 @@
 
 .control {
   position: relative;
+  cursor: pointer;
 }
 
 .control__mark {
@@ -26,14 +27,15 @@
   background-color: #ffffff;
   box-sizing: border-box;
   border-radius: 50%;
+  border: 4px solid #bdbdbd;
   z-index: 2;
 }
 
 .control__mark:focus,
 .control__mark:focus-visible {
-  border: 3px solid #83B3D3;
+  border: 3px solid #83b3d3;
 }
 
 .control__mark:disabled {
-  background-color:#FFFFFF;
+  background-color: #ffffff;
 }
