--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,3 +23,9 @@
 @import "blocks/product-card";
 @import "blocks/pagination";
 @import "blocks/location";
+@import "blocks/page-footer";
+@import "blocks/social";
+@import "blocks/contacts";
+@import "blocks/copyright";
+@import "blocks/carousel";
+
