--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,25 +7,25 @@
 /* BLOCKS */
 @import "blocks/header";
 @import "blocks/page-body";
+@import "blocks/button";
 @import "blocks/menu-nav";
 @import "blocks/site-list";
 @import "blocks/main-header";
 @import "blocks/visually-hidden";
-@import "blocks/button";
-@import "blocks/swiper";
 @import "blocks/advantages";
 @import "blocks/control";
 @import "blocks/filter";
 @import "blocks/products";
-@import "blocks/page-header";
 @import "blocks/sorting";
 @import "blocks/catalog";
 @import "blocks/product-card";
 @import "blocks/pagination";
 @import "blocks/location";
 @import "blocks/page-footer";
+@import "blocks/page-nav";
 @import "blocks/social";
 @import "blocks/contacts";
 @import "blocks/copyright";
 @import "blocks/carousel";
-
+@import "blocks/range";
+@import "blocks/main-wrapper";
