--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -7,11 +7,15 @@
   position: absolute;
   top: 0;
   right: 0;
-  margin-right: 40px;
+  margin-right: 60px;
   display: flex;
   flex-wrap: wrap;
   max-width: 50%;
   box-sizing: border-box;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 40px;
+  }
 }
 
 .main-header__wrapper {
@@ -20,7 +24,7 @@
 }
 
 .main-header__logo {
-  padding: 0;
+  padding: 6px;
   margin: 0;
   display: block;
 }
@@ -51,12 +55,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 0;
-    width: 768px;
   }
 
   .main-header__wrapper {
     padding: 0;
-    padding-left: 26px;
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .main-header__toggle--active {
@@ -64,25 +69,89 @@
   }
 
   .main-header__logo {
-    width: 174px;
-    text-align: start;
+    flex: 0 0 20%;
+    width: 102px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    column-gap: 6px;
+    text-decoration: none;
+  }
+
+  .main-header__letters-left::before,
+  .main-header__letters-right::before {
+    content: "D";
+    visibility: visible;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 800;
+  }
+
+  .main-header__letters-right::before {
+    content: "G";
   }
 }
 
 @media (min-width: $desktop-width) {
   .main-header {
     margin: 0 auto;
+    box-sizing: border-box;
+    padding: 0 40px;
   }
 
   .main-header__logo {
-    width: 202px;
+    flex: 0 0 30%;
     height: 60px;
+    position: relative;
   }
 
-  .main-header__wrapper {
-    margin-top: 54px;
-    margin-left: 80px;
-    justify-self: start;
-    align-self: start;
+  .main-header__letters-left::before,
+  .main-header__letters-right::before {
+    content: "DRINK";
+    visibility: visible;
+    font-size: 24px;
+    line-height: 24px;
+    font-weight: 800;
+    color: #333333;
+  }
+
+  .main-header__letters-right::before {
+    content: "GO";
+  }
+
+  .main-header__icon {
+    position: relative;
+    padding-right: 40px;
+  }
+
+  .main-header__logo::after,
+  .main-header__icon::after {
+    content: "Интернет-магазин кофейных напитков";
+    position: absolute;
+    top: 50%;
+    left: 184px;
+    transform: translateY(-50%);
+    visibility: visible;
+    width: 140px;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 400;
+    color: #333333;
+  }
+
+  .main-header__icon::after {
+    position: absolute;
+    content: "войти";
+    visibility: visible;
+    top: 50%;
+    left: 42px;
+    text-transform: uppercase;
+    font-weight: 500;
+    transform: translateY(-50%);
+    z-index: 2;
+  }
+
+  .main-header__icon:last-of-type::after {
+    content: "корзина";
   }
 }
