--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -3,6 +3,11 @@
   margin: 0;
   margin-bottom: 20px;
   background-color: #ffffff;
+
+  @media (min-width: $tablet-width) {
+    flex: 0 0 49%;
+    box-sizing: border-box;
+  }
 }
 
 .product-card__image {
@@ -41,8 +46,16 @@
   font-size: 20px;
   line-height: 32px;
   font-weight: 600;
+
+  @media (min-width: $tablet-width) {
+    flex: 0 0 45%;
+  }
 }
 
 .product-card__button {
   flex: 0 0 60%;
+
+  @media (min-width: $tablet-width) {
+    flex: 0 0 45%;
+  }
 }
