--- a/source/sass/blocks/filter.scss
+++ b/source/sass/blocks/filter.scss
@@ -6,11 +6,16 @@
   margin: 0 auto;
 }
 
+.filter__item:last-of-type {
+  opacity: 0.3;
+}
+
 .filter__title {
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
   margin: 0;
+  margin-bottom: 16px;
 }
 
 .filter__list,
@@ -22,4 +27,5 @@
 
 .filter__item {
   padding-left: 50px;
+  margin-bottom: 14px;
 }
