--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -69,20 +69,23 @@
   z-index: 3;
 }
 
-.range__toggle--max {
-  left: 85%;
-}
-
-.range__toggle:hover {
-  background: #ffffff;
+.range__toggle:hover,
+.range__toggle:focus {
+  width: 16px;
+  height: 16px;
+  background-color: #ddd6f3;
+  border: 2px solid #ffffff;
+  outline: 2px solid #9070ec;
 }
 
 .range__toggle:focus {
-  border: 3px solid #83B3D3;
-  background: #ffffff;
+  width: 16px;
+  height: 16px;
+  background-color: #9070ec;
+  border: 2px solid #ffffff;
+  outline: 2px solid #9070ec;
 }
 
-.range__toggle:active {
-  border: 2px solid #83B3D3;
-  background: #ffffff;
+.range__toggle--max {
+  left: 85%;
 }
