--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -40,6 +40,9 @@
 
   @media (min-width: $tablet-width) {
     text-align: center;
+    font-size: 42px;
+    line-height: 64px;
+    font-weight: 700;
   }
 }
 
@@ -89,6 +92,27 @@
 .advantages__description {
   @media (min-width: $desktop-width) {
     text-align: center;
+  }
+}
+
+.advantages__name {
+  font-size: 18px;
+  line-height: 32px;
+  font-weight: 700;
+
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 36px;
+  }
+}
+
+.advantages__description {
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 400;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
   }
 }
 
