--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -29,9 +29,11 @@
 .button--app,
 .button--reset {
   width: 280px;
+  margin-bottom: 16px;
 
   @media (min-width: $tablet-width) {
     width: 137px;
+    margin-bottom: 0;
     margin-right: 20px;
     display: inline-block;
   }
