--- a/source/sass/blocks/carousel.scss
+++ b/source/sass/blocks/carousel.scss
@@ -19,6 +19,11 @@
   color: #333333;
   position: relative;
 
+  @media (min-width: $tablet-width) {
+    font-size: 56px;
+    line-height: 80px;
+  }
+
   @media (min-width: $desktop-width) {
     text-align: start;
   }
@@ -49,6 +54,11 @@
   padding: 0;
   color: #333333;
   margin-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 32px;
+  }
 
   @media (min-width: $desktop-width) {
     text-align: start;
@@ -165,11 +175,27 @@
 .carousel__button:hover,
 .carousel__button:focus {
   background: linear-gradient(to left, #ffffff 10%, #f3ebe1 80%);
+
+  @media (min-width: $tablet-width) {
+    height: 70%;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 100%;
+  }
 }
 
 .carousel__button:active {
   background: linear-gradient(to right, #f3ebe1 10%, #7859cf 70%);
   opacity: 0.2;
+
+  @media (min-width: $tablet-width) {
+    height: 70%;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 100%;
+  }
 }
 
 .carousel__button:disabled {
@@ -249,13 +275,4 @@
 .carousel__price--new {
   font-size: 20px;
   font-weight: 600;
-}
-
-.carousel__pagination {
-  display: none;
-
-  @media (min-width: $tablet-width) {
-    display: block;
-    position: absolute;
-  }
 }
