--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -1,7 +1,7 @@
 .page-body {
   min-width: 320px;
   margin: 0 auto;
-  font-family: "Montserrat", "Arial", sans-serif;
+  font-family: "Montserrat", "Tahoma", sans-serif;
 }
 
 @media (min-width: $mobile-width-only) {
