--- a/source/sass/blocks/page-nav.scss
+++ b/source/sass/blocks/page-nav.scss
@@ -5,6 +5,12 @@
   list-style: none;
 }
 
+.page-nav__item {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
+}
+
 .page-nav__link {
   text-decoration: none;
   text-transform: uppercase;
