--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -18,13 +18,19 @@
 .product-card__link {
   text-decoration: none;
   appearance: none;
+  color: #333333;
 }
 
 .product-card__title {
   font-size: 18px;
-  line-height: 30px;
+  line-height: 32px;
   font-weight: 700;
   margin-bottom: 4px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 36px;
+  }
 }
 
 .product-card__description {
