--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -16,6 +16,10 @@
   @media (min-width: $tablet-width) {
     margin-right: 40px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 0;
+  }
 }
 
 .main-header__wrapper {
