--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -18,6 +18,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    position: static;
     margin-right: 0;
   }
 }
@@ -107,6 +108,10 @@
     flex: 0 0 30%;
     height: 60px;
     position: relative;
+  }
+
+  .main-header__wrapper {
+    width: 100%;
   }
 
   .main-header__letters-left::before,
