--- a/source/sass/blocks/menu-nav.scss
+++ b/source/sass/blocks/menu-nav.scss
@@ -13,7 +13,7 @@
   padding: 22px;
   margin: 10px;
   box-sizing: border-box;
-  background-color: transparent;
+  background-color: #ffffff;
 }
 
 .menu-nav--closed > .menu-nav__toggle::before {
@@ -40,31 +40,6 @@
   cursor: pointer;
   background-color: inherit;
 
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    top: 26px;
-    right: 10px;
-    width: 24px;
-    height: 1.5px;
-    background-color: #333333;
-  }
-
-  &::before {
-    transform: rotate(45deg);
-    box-shadow: none;
-  }
-
-  &::after {
-    transform: rotate(-45deg);
-  }
-
-  &:hover,
-  &:active {
-    opacity: 0.3;
-  }
-
   .menu-nav--nojs ~ .menu-nav {
     display: none;
   }
@@ -74,12 +49,33 @@
   }
 }
 
+.menu-nav--opened > .menu-nav__toggle::before,
+.menu-nav--opened > .menu-nav__toggle::after {
+  content: "";
+  position: absolute;
+  top: 20px;
+  right: 12px;
+  width: 20px;
+  height: 1.5px;
+  background-color: #333333;
+  transform: rotate(45deg);
+  box-shadow: none;
+}
+
+.menu-nav--opened > .menu-nav__toggle::after {
+  transform: rotate(-45deg);
+}
+
+.menu-nav__toggle:hover {
+  background-color: #ffffff;
+}
+
+.menu-nav__toggle:active {
+  background-color: #f0ebff;
+}
+
 @media (max-width: $mobile-width-only) {
   .menu-nav--closed .site-list {
-    display: none;
-  }
-
-  .menu-nav--closed .user-list {
     display: none;
   }
 
@@ -106,6 +102,6 @@
 
 @media (min-width: $desktop-width) {
   .menu-nav {
-    flex: 0 1 65%;
+    flex: 0 1 50%;
   }
 }
