--- a/source/sass/blocks/carousel.scss
+++ b/source/sass/blocks/carousel.scss
@@ -1,6 +1,17 @@
 .carousel {
   overflow: hidden;
   position: relative;
+  background-color: #f3ebe1;
+
+  @media (min-width: $tablet-width) {
+    background: linear-gradient(transparent 80%, #ffffff 20%);
+    background-color: #f3ebe1;
+  }
+
+  @media (min-width: $desktop-width) {
+    background: linear-gradient(transparent 100%, #ffffff 0%);
+    background-color: #f3ebe1;
+  }
 }
 
 .carousel a {
@@ -74,17 +85,14 @@
   box-sizing: border-box;
   overflow: hidden;
   list-style: none;
-  background-color: #f3ebe1;
 
   @media (min-width: $tablet-width) {
     height: 828px;
     width: 84%;
-    background: linear-gradient(#f3ebe1 70%, #ffffff 30%);
   }
 
   @media (min-width: $desktop-width) {
     height: 714px;
-    background: #f3ebe1;
   }
 }
 
@@ -158,35 +166,22 @@
   top: 0;
   width: 6%;
   height: 100%;
-  background-color: #f3ebe1;
+  background-color: transparent;
   border: none;
   cursor: pointer;
 
   @media (min-width: $tablet-width) {
     width: 8%;
-    background: linear-gradient(#f3ebe1 70%, #ffffff 30%);
-  }
-
-  @media (min-width: $desktop-width) {
-    background: #f3ebe1;
   }
 }
 
 .carousel__button:hover,
 .carousel__button:focus {
-  background: linear-gradient(to left, #ffffff 10%, #f3ebe1 80%);
-
-  @media (min-width: $tablet-width) {
-    height: 70%;
-  }
-
-  @media (min-width: $desktop-width) {
-    height: 100%;
-  }
+  background: linear-gradient(to left, #ffffff 10%, transparent 80%);
 }
 
 .carousel__button:active {
-  background: linear-gradient(to right, #f3ebe1 10%, #7859cf 70%);
+  background: linear-gradient(to right, #f3ebe1 10%, transparent 70%);
   opacity: 0.2;
 
   @media (min-width: $tablet-width) {
@@ -204,11 +199,11 @@
 
 .carousel__button--prev:hover,
 .carousel__button--prev:focus {
-  background: linear-gradient(to right, #ffffff 10%, #f3ebe1 80%);
+  background: linear-gradient(to right, #ffffff 10%, transparent 80%);
 }
 
 .carousel__button--prev:active {
-  background: linear-gradient(to left, #f3ebe1 10%, #7859cf 70%);
+  background: linear-gradient(to left, #f3ebe1 10%, transparent 70%);
   opacity: 0.2;
 }
 
@@ -275,4 +270,29 @@
 .carousel__price--new {
   font-size: 20px;
   font-weight: 600;
+}
+
+.carousel__pagination {
+  position: absolute;
+  bottom: 80px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.carousel__toggle {
+  @media (min-width: $desktop-width) {
+    padding: 2px 31px;
+    font-size: 0;
+    border-radius: 2px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+  }
+}
+
+.carousel__toggle--active {
+  background-color: $accent;
+}
+
+.carousel__toggle:not(:last-of-type) {
+  margin-right: 6px;
 }
