--- a/source/sass/blocks/carousel.scss
+++ b/source/sass/blocks/carousel.scss
@@ -78,7 +78,7 @@
 
 .carousel__items {
   width: 88%;
-  height: 656px;
+  min-height: 656px;
   display: grid;
   margin: 0 auto;
   padding: 20px 0;
@@ -87,27 +87,27 @@
   list-style: none;
 
   @media (min-width: $tablet-width) {
-    height: 828px;
+    min-height: 828px;
     width: 84%;
   }
 
   @media (min-width: $desktop-width) {
-    height: 714px;
+    min-height: 714px;
   }
 }
 
 .carousel__item {
   margin: 0;
   padding: 0;
-  visibility: hidden;
+  display: none;
 }
 
 .carousel__item--show {
   box-sizing: border-box;
-  visibility: visible;
+  display: block;
   position: relative;
   grid-column: 1/-1;
-  grid-row: 1/-1;
+  grid-row: 1/2;
   opacity: 1;
   transition: 0.5s;
 
