--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -3,7 +3,6 @@
 
   @media (min-width: $desktop-width) {
     display: grid;
-    grid-template-rows: 5fr 2fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
@@ -145,6 +144,6 @@
 .page-footer__copyright {
   @media (min-width: $desktop-width) {
     grid-column: 1/-1;
-    grid-row: 3/-1;
+    padding: 20px;
   }
 }
