--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -13,9 +13,11 @@
 }
 
 .social__item {
-  @media (min-width: $tablet-width) {
-    padding: 10px;
-  }
+  display: block;
+  margin: 0;
+  padding: 10px;
+  padding-bottom: 5px;
+  border-radius: 4px;
 }
 
 .social__item:hover,
