--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -15,6 +15,10 @@
 
 .advantages {
   padding: 50px 18px 28px 18px;
+
+  @media (min-width: $desktop-width) {
+    padding: 80px 18px 98px 18px;
+  }
 }
 
 .advantages__wrapper {
@@ -27,7 +31,7 @@
     grid-template-columns: 1fr 1fr;
     column-gap: 30px;
     row-gap: 50px;
-    padding: 0 30px;
+    padding: 30px;
   }
 
   @media (min-width: $desktop-width) {
