--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -14,6 +14,15 @@
   @media (min-width: $tablet-width) {
     margin: 0 auto;
   }
+
+  &:hover,
+  &:focus {
+    color: $accent;
+  }
+
+  &:active {
+    color: #593cac;
+  }
 }
 
 .copyright__logo {
