--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -19,6 +19,15 @@
   text-decoration: none;
   appearance: none;
   color: #333333;
+
+  &:hover,
+  &:focus {
+    opacity: 0.7;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .product-card__title {
@@ -65,6 +74,10 @@
   @media (min-width: $tablet-width) {
     flex: 0 0 35%;
     padding-left: 44px;
+  }
+
+  @media (min-width: $tablet-width) {
+    flex: 0 0 30%;
   }
 }
 
