--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -2,9 +2,12 @@
   background-color: #f8f8f8;
   padding: 18px 50px 10px 18px;
 
+  @media (min-width: $tablet-width) {
+    padding: 38px 50px 10px 18px;
+  }
+
   @media (min-width: $desktop-width) {
     display: inline-block;
-    // width: 25%;
   }
 }
 
@@ -18,6 +21,7 @@
 
   @media (min-width: $tablet-width) {
     font-size: 42px;
+    margin-bottom: 30px;
   }
 
   @media (min-width: $desktop-width) {
