--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -9,8 +9,10 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 20px;
+  padding: 0;
   padding-top: 22px;
   padding-bottom: 24px;
+  border-bottom: 1px solid #f0ebff;
   display: block;
   text-transform: uppercase;
 }
@@ -45,7 +47,7 @@
 
 .site-list__link--current::before {
   content: "";
-  bottom: -24px;
+  bottom: -22px;
   height: 2px;
   width: 100%;
   position: absolute;
